# simple_project_tracker

./: .envrc  .gitignore  main.py  pyproject.toml  tracker
project_tracker/: all_pages.py  config.py  db.py  employee_management.py  main.py  menu.py  project_tracker.py  theme.py
